[gd_scene load_steps=6 format=3 uid="uid://bg3hqbij4tfk6"]

[ext_resource type="Script" path="res://UI/how_to_play.gd" id="1_ii15c"]
[ext_resource type="Theme" uid="uid://ca4ojcmrepr24" path="res://UI/standard_theme.tres" id="2_pn2y8"]
[ext_resource type="FontFile" uid="uid://c2t1amxynu30o" path="res://UI/PublicPixel-E447g.ttf" id="3_ybnwq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wagc7"]
bg_color = Color(0.270588, 0.14902, 0.478431, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.776471, 0.678431, 0.956863, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 8

[sub_resource type="Theme" id="Theme_mn0gc"]
Button/font_sizes/font_size = 30
Button/fonts/font = ExtResource("3_ybnwq")
Label/font_sizes/font_size = 15
Label/fonts/font = ExtResource("3_ybnwq")
Panel/styles/panel = SubResource("StyleBoxFlat_wagc7")

[node name="HowToPlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ii15c")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -271.5
offset_right = 250.0
offset_bottom = 271.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pn2y8")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_mn0gc")
text = "How To Play"

[node name="Spacer" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "


"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="controlsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pn2y8")

[node name="Controls" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/controlsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Controls:"

[node name="Spacer" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/controlsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15

[node name="upLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/controlsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Up: W"

[node name="downLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/controlsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Down: S"

[node name="leftLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/controlsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Left: A
"

[node name="rightLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/controlsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Right: D"

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="descriptionContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/descriptionContainer"]
layout_mode = 2
theme = ExtResource("2_pn2y8")
theme_override_font_sizes/font_size = 15
text = "hehe haha this is
how you play our
game dk something
about stopping void 
creachures from
closing a black hole


idk put the
actual description
here pls"
horizontal_alignment = 2

[node name="Spacer2" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pn2y8")
theme_override_font_sizes/font_size = 30
text = "Back"
